--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,13 +3,11 @@ server.port=8080
 #spring.security.user.password=durgesh
 #db configurations
 
-spring.datasource.url=jdbc:mysql://localhost:3307/Learnspring3
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=KyNmFozUeeIJouGxNzkdYLyEoFUZAGaZ
 #jpa configurations
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 #driver classname
 #dialect
-
-spring.profiles.active=prod
