--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,13 +1,9 @@
-server.port=8080
-#spring.security.user.name=durgesh
-#spring.security.user.password=durgesh
-#db configurations
+server.port=${PORT:8080}
 
 spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
 spring.datasource.password=KyNmFozUeeIJouGxNzkdYLyEoFUZAGaZ
-#jpa configurations
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-#driver classname
-#dialect
+spring.sql.init.mode=always
