--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=${PORT:8080}
 #spring.security.user.name=durgesh
 #spring.security.user.password=durgesh
 #db configurations
