--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,7 @@
 server.port=${PORT:8080}
-
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.username=root
+spring.datasource.password=KyNmFozUeeIJouGxNzkdYLyEoFUZAGaZ
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.sql.init.mode=always
